--- a/examples/src/assets/less/format.less
+++ b/examples/src/assets/less/format.less
@@ -76,7 +76,8 @@ h5.snippet-title {
     width: 100%;
 }
 
-code {
+p > code,
+td > code {
     margin: 0 1px;
     padding: 3px 6px;
     font-family: "IBM Plex Mono", Consolas, "Andale Mono WT", "Andale Mono",
