--- a/packages/styles/theme.less
+++ b/packages/styles/theme.less
@@ -1,6 +1,9 @@
 @import "./variable/index.less";
 
 :root {
+    --gray: @gray;
+    --white: @white;
+
     --primary-color-light: @primary-color-light;
     --link-color-light: @link-color-light;
     --success-color-light: @success-color-light;
@@ -23,4 +26,47 @@
             --gray-@{value}: color-mix(in srgb, @gray, @white @value * 8%);
         }
     });
+
+    --background-light-color-1: @background-light-color-1;
+    --background-light-color-2: @background-light-color-2;
+    --background-light-color-3: @background-light-color-3;
+    --background-light-color-4: @background-light-color-4;
+
+    --xs-width: @xs-width;
+    --sm-width: @sm-width;
+    --md-width: @md-width;
+    --lg-width: @lg-width;
+
+    --space-xs: @space-xs;
+    --space-sm: @space-sm;
+    --space-md: @space-md;
+    --space-lg: @space-lg;
+    --space-xl: @space-xl;
+
+    --line-color-xs: @line-color-xs;
+    --line-color-md: @line-color-md;
+    --line-color-lg: @line-color-lg;
+
+    --size-xs: @size-xs;
+    --size-sm: @size-sm;
+    --size-md: @size-md;
+    --size-lg: @size-lg;
+    --size-xl: @size-xl;
+
+    --radius-xl: @radius-xl;
+    --radius-lg: @radius-lg;
+    --radius-md: @radius-md;
+    --radius-sm: @radius-sm;
+    --radius-rd: @radius-rd;
+
+    --shadow-s: @shadow-s;
+    --shadow-m: @shadow-m;
+    --shadow-l: @shadow-l;
+
+    --font-color-lg: @font-color-lg;
+    --font-color-md: @font-color-md;
+    --font-color-sm: @font-color-sm;
+    --font-color-xs: @font-color-xs;
+
+    --animats: @animats;
 }
