docs(color): 增补shadow-color

--- a/packages/styles/theme.less
+++ b/packages/styles/theme.less
@@ -59,9 +59,9 @@
     --radius-sm: @radius-sm;
     --radius-rd: @radius-rd;
 
-    --shadow-s: @shadow-s;
-    --shadow-m: @shadow-m;
-    --shadow-l: @shadow-l;
+    --shadow-xs: @shadow-xs;
+    --shadow-md: @shadow-md;
+    --shadow-lg: @shadow-lg;
 
     --font-color-lg: @font-color-lg;
     --font-color-md: @font-color-md;
