--- a/packages/styles/variable/index.less
+++ b/packages/styles/variable/index.less
@@ -76,9 +76,9 @@
 @radius-rd: 800px;
 
 //背景投影
-@shadow-s: 0 6px 6px -2px rgba(0, 0, 0, 0.12);
-@shadow-m: 0 4px 16px 0 rgba(0, 0, 0, 0.16);
-@shadow-l: 0 4px 48px 0 rgba(0, 0, 0, 0.12);
+@shadow-xs: 0 6px 6px -2px rgba(0, 0, 0, 0.12);
+@shadow-md: 0 4px 16px 0 rgba(0, 0, 0, 0.16);
+@shadow-lg: 0 4px 48px 0 rgba(0, 0, 0, 0.12);
 
 // 字体颜色
 @font-color-lg: @gray-10;
