--- a/packages/styles/icon/index.less
+++ b/packages/styles/icon/index.less
@@ -1,6 +1,9 @@
 @import "../variable/index.less";
 
 .bird-svg-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: @gray-8;
     transition: color @animats;
     .svg-icon {
