--- a/packages/styles/icon/index.less
+++ b/packages/styles/icon/index.less
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     color: @gray-8;
+    cursor: pointer;
     transition: color @animats;
     .svg-icon {
         width: 24px;
@@ -25,5 +26,30 @@
                 }
             }
         }
+    }
+
+    &.bird-svg-icon__primary:hover {
+        color: @primary-color-light;
+    }
+
+    &.bird-svg-icon__ordinary {
+        color: @gray-6;
+        &:hover {
+            color: @gray-8;
+        }
+    }
+
+    &.bird-svg-icon__aux {
+        color: @gray-4;
+        &:hover {
+            color: @gray-6;
+        }
+        &:active {
+            color: @gray-8;
+        }
+    }
+
+    &.is-disabled {
+        cursor: not-allowed;
     }
 }
